--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <body>
     <!-- container -->
     <div class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
-      <header class="mx-6 mb-[120px] mt-7">
-        <nav class="mb-28 flex items-center justify-between">
+      <header class="mx-6 mb-[120px] mt-7 lg:mx-20 lg:mt-20">
+        <nav class="mb-28 flex items-center justify-between lg:mb-[225px]">
           <!-- logo -->
           <h1 class="max-w-[96px] lg:max-w-[240px]">
             <img src="./images/logo.svg" alt="logo" class="w-full" />
@@ -34,7 +34,7 @@
 
           <a
             href="#"
-            class="rounded-[11.765px] border-[0.588px] border-pink px-[18.24px] py-[5.29px] text-[9.412px] leading-none text-pink shadow-button-mobile transition-colors hover:border-light-pink hover:text-light-pink"
+            class="w-20 rounded-[11.765px] border-[0.588px] border-pink py-[5.29px] text-center text-[9.412px] leading-none text-pink shadow-button-mobile transition-colors hover:border-light-pink hover:text-light-pink lg:w-[136px] lg:rounded-[20px] lg:border-[1px] lg:py-2 lg:text-base lg:shadow-button-desktop"
             >Try it free</a
           >
         </nav>
@@ -42,18 +42,22 @@
         <!-- hero -->
         <div class="mx-auto max-w-[296px] lg:max-w-[1017px]">
           <!-- title -->
-          <div class="mb-[104px] text-center text-very-dark-cyan">
-            <h2 class="leading- mb-6 text-2xl font-bold">
+          <div class="mb-[104px] text-center text-very-dark-cyan lg:mb-[120px]">
+            <h2
+              class="mb-6 text-2xl font-bold leading-normal lg:mb-[26px] lg:text-5xl"
+            >
               Build The Community Your Fans Will Love
             </h2>
-            <p class="mb-12 text-sm leading-normal">
+            <p
+              class="mb-12 text-sm leading-normal lg:mx-auto lg:max-w-[600px] lg:text-xl"
+            >
               Huddle re-imagines the way we build communities. You have a voice,
               but so does your audience. Create connections with your users as
               you engage in genuine discussion.
             </p>
             <a
               href="#"
-              class="inline-block w-[200px] rounded-3xl bg-pink py-[11px] text-xs font-bold leading-normal text-white drop-shadow-button-mobile transition-colors hover:bg-light-pink lg:w-[400px]"
+              class="inline-block w-[200px] rounded-3xl bg-pink py-[11px] text-xs font-bold leading-normal text-white drop-shadow-button-mobile transition-colors hover:bg-light-pink lg:w-[400px] lg:rounded-[50px] lg:py-[25px] lg:text-xl lg:drop-shadow-button-desktop"
               >Get Started For Free</a
             >
           </div>
@@ -69,9 +73,11 @@
         <!-- hero -->
       </header>
 
-      <main class="mb-[251px] flex flex-col gap-32">
+      <main class="mb-[251px] flex flex-col gap-32 lg:mb-[178px]">
         <!-- statistic -->
-        <div class="flex flex-col items-center gap-[90px]">
+        <div
+          class="flex flex-col items-center gap-[90px] lg:flex-row lg:justify-center lg:gap-[341px]"
+        >
           <!-- one group -->
           <div class="flex flex-col">
             <img
@@ -81,13 +87,13 @@
             />
 
             <h2
-              class="text-[60.952px] font-bold leading-normal text-very-dark-cyan"
+              class="text-[60.952px] font-bold leading-normal text-very-dark-cyan lg:text-[96px]"
             >
               1.4k+
             </h2>
 
             <p
-              class="text-center text-[15.238px] leading-normal text-[#808E9A]"
+              class="text-center text-[15.238px] leading-normal text-[#808E9A] lg:text-2xl"
             >
               Communities Formed
             </p>
@@ -103,12 +109,14 @@
             />
 
             <h2
-              class="text-[60.952px] font-bold leading-normal text-very-dark-cyan"
+              class="text-[60.952px] font-bold leading-normal text-very-dark-cyan lg:text-[96px]"
             >
               2.7m+
             </h2>
 
-            <p class="text-center text-[13.38px] leading-normal text-[#808E9A]">
+            <p
+              class="text-center text-[13.38px] leading-normal text-[#808E9A] lg:text-2xl"
+            >
               Messages Sent
             </p>
           </div>
@@ -138,7 +146,7 @@
           <div class="bg-very-pale-blue py-[60px]">
             <!-- container -->
             <div
-              class="mx-auto flex max-w-[320px] flex-col items-center gap-[74.22px] lg:max-w-[1180px]"
+              class="mx-auto flex max-w-[320px] flex-col items-center gap-[74.22px] lg:max-w-[1180px] lg:flex-row-reverse lg:gap-[120px]"
             >
               <!-- illustration -->
               <div class="max-w-[258.611px] lg:max-w-[517.222px]">
@@ -151,11 +159,15 @@
               <!-- illustration -->
 
               <!-- content -->
-              <div class="text-center text-very-dark-cyan">
-                <h3 class="mb-4 text-xl font-bold leading-normal">
+              <div class="text-center text-very-dark-cyan lg:text-left">
+                <h3
+                  class="mb-4 text-xl font-bold leading-normal lg:mb-[26px] lg:text-[40px]"
+                >
                   Grow Together
                 </h3>
-                <p class="px-3 text-sm leading-normal">
+                <p
+                  class="lg px-3 text-sm leading-normal lg:max-w-[520px] lg:pl-0 lg:pr-8 lg:text-base"
+                >
                   Generate meaningful discussions with your audience and build a
                   strong, loyal community. Think of the insightful conversations
                   you miss out on with a feedback form.
@@ -189,7 +201,7 @@
         <div>
           <!-- content -->
           <div
-            class="mx-auto flex max-w-[320px] flex-col items-center gap-[85.5px] lg:max-w-[1180px]"
+            class="mx-auto flex max-w-[320px] flex-col items-center gap-[85.5px] lg:max-w-[1180px] lg:flex-row lg:gap-[134px]"
           >
             <!-- illustration -->
             <div class="max-w-[265.5px] lg:max-w-[531px]">
@@ -202,11 +214,13 @@
             <!-- illustration -->
 
             <!-- content -->
-            <div class="text-center text-very-dark-cyan">
-              <h3 class="mb-4 text-xl font-bold leading-normal">
+            <div class="text-center text-very-dark-cyan lg:text-left">
+              <h3
+                class="mb-4 text-xl font-bold leading-normal lg:mb-[26px] lg:text-[40px]"
+              >
                 Flowing Conversations
               </h3>
-              <p class="px-3 text-sm leading-normal">
+              <p class="px-3 text-sm leading-normal lg:px-0 lg:text-base">
                 You wouldn't paginate a conversation in real life, so why do it
                 online? Our threads have just-in-time loading for a more natural
                 flow.
@@ -240,7 +254,7 @@
           <div class="bg-very-pale-blue pb-28 pt-8">
             <!-- container -->
             <div
-              class="mx-auto flex max-w-[320px] flex-col items-center gap-[79px] lg:max-w-[1180px]"
+              class="mx-auto flex max-w-[320px] flex-col items-center gap-[79px] lg:max-w-[1180px] lg:flex-row-reverse lg:gap-[133px]"
             >
               <!-- illustration -->
               <div class="max-w-[267px] lg:max-w-[534px]">
@@ -253,11 +267,15 @@
               <!-- illustration -->
 
               <!-- content -->
-              <div class="text-center text-very-dark-cyan">
-                <h3 class="mb-4 text-xl font-bold leading-normal">
+              <div class="text-center text-very-dark-cyan lg:text-left">
+                <h3
+                  class="mb-4 text-xl font-bold leading-normal lg:mb-[26px] lg:text-[40px]"
+                >
                   Your Users
                 </h3>
-                <p class="px-3 text-sm leading-normal">
+                <p
+                  class="px-3 text-sm leading-normal lg:max-w-[520px] lg:px-0 lg:pr-6 lg:text-base"
+                >
                   It takes no time at all to integrate Huddle with your app's
                   authentication solution. This means, once signed in to your
                   app, your users can start chatting immediately.
@@ -290,12 +308,12 @@
         <div
           class="mx-4 flex flex-col items-center gap-10 text-center text-very-dark-cyan"
         >
-          <h3 class="text-2xl font-bold leading-normal">
+          <h3 class="text-2xl font-bold leading-normal lg:text-[40px]">
             Ready To Build Your Community?
           </h3>
           <a
             href="#"
-            class="inline-block w-[200px] rounded-3xl bg-pink py-[11px] text-xs font-bold leading-normal text-white drop-shadow-button-mobile transition-colors hover:bg-light-pink lg:w-[400px]"
+            class="inline-block w-[200px] rounded-3xl bg-pink py-[11px] text-xs font-bold leading-normal text-white drop-shadow-button-mobile transition-colors hover:bg-light-pink lg:w-[400px] lg:rounded-[50px] lg:py-[25px] lg:text-xl lg:drop-shadow-button-desktop"
             >Get Started For Free</a
           >
         </div>
@@ -320,26 +338,42 @@
         <!-- background footer top -->
 
         <!-- content -->
-        <div class="flex flex-col gap-[104px] bg-very-dark-cyan p-7 text-white">
+        <div
+          class="flex flex-col gap-[104px] bg-very-dark-cyan p-7 text-white lg:flex-row-reverse lg:justify-between lg:gap-0 lg:px-[120px] lg:py-[103px]"
+        >
           <!-- newsletter -->
           <div>
-            <h4 class="mb-4 text-xl font-bold leading-normal">Newsletter</h4>
-            <p class="mb-8 text-sm font-semibold leading-6">
+            <h4 class="mb-4 text-xl font-bold leading-normal lg:text-2xl">
+              Newsletter
+            </h4>
+            <p
+              class="mb-8 text-sm font-semibold leading-6 lg:mb-10 lg:max-w-[344px]"
+            >
               To recieve tips on how to grow your community, sign up to our
               weekly newsletter. We’ll never send you spam or pass on your email
               address
             </p>
 
-            <form class="flex flex-col gap-4">
-              <input
-                type="text"
-                class="w-full rounded-md py-3 pl-4 text-sm leading-6 text-very-dark-cyan outline-none"
-                id="email-input"
-              />
+            <form
+              class="flex flex-col gap-4 lg:w-[520px] lg:flex-row lg:justify-between lg:gap-10"
+              id="form"
+            >
+              <div class="flex w-full flex-col">
+                <input
+                  type="text"
+                  class="w-full rounded-md py-3 pl-4 text-sm leading-6 text-very-dark-cyan outline-none"
+                  id="email-input"
+                />
+                <p
+                  class="hidden text-xs font-semibold leading-loose text-light-red"
+                  id="error-text"
+                >
+                  Check your email please
+                </p>
+              </div>
               <button
                 type="submit"
-                class="self-end rounded-[5px] bg-pink px-10 py-3 font-bold leading-normal transition-colors hover:bg-light-pink"
-                id="btn-submit"
+                class="self-end rounded-[5px] bg-pink px-10 py-3 font-bold leading-normal transition-colors hover:bg-light-pink lg:self-start"
               >
                 Subscribe
               </button>
@@ -348,25 +382,29 @@
           <!-- newsletter -->
 
           <!-- contact -->
-          <div>
-            <div class="mb-4 h-8 max-w-[200px] lg:h-[38px] lg:max-w-[240px]">
+          <div class="lg:max-w-[340px]">
+            <div
+              class="mb-4 h-8 max-w-[200px] lg:mb-6 lg:h-[38px] lg:max-w-[240px]"
+            >
               <img src="./images/logo-white.svg" alt="logo" class="w-full" />
             </div>
 
-            <p class="mb-10 text-sm font-semibold leading-6">
+            <p class="mb-10 text-sm font-semibold leading-6 lg:mb-6 lg:pr-6">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris
               nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
             </p>
 
             <!-- phone & email -->
-            <div class="mb-12 flex flex-col gap-4">
+            <div class="mb-12 flex flex-col gap-4 lg:mb-20">
               <div class="flex items-center gap-4">
                 <img
                   src="./images/icon-phone.svg"
                   alt="icon phone"
                   class="size-6"
                 />
-                <a href="tel:+1-543-123-4567" class="text-sm leading-6"
+                <a
+                  href="tel:+1-543-123-4567"
+                  class="text-sm leading-6 lg:text-base"
                   >Phone: +1-543-123-4567</a
                 >
               </div>
@@ -377,7 +415,9 @@
                   alt="icon email"
                   class="size-6"
                 />
-                <a href="mailto:example@huddle.com" class="text-sm leading-6"
+                <a
+                  href="mailto:example@huddle.com"
+                  class="text-sm leading-6 lg:text-base"
                   >example@huddle.com</a
                 >
               </div>
@@ -407,5 +447,6 @@
       </footer>
     </div>
     <!-- container -->
+    <script src="./script.js"></script>
   </body>
 </html>
